Add a template task too

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,5 @@
 ---
 # tasks file for ansible-role-hosts-int
+
+- name: Create hosts file
+  template: src=hosts.j2 dest="{{ hosts_int_file_to_populate }}" owner=root group=root mode=0644
