--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,7 +1,7 @@
 galaxy_info:
-  author: your name
-  description: your description
-  company: your company (optional)
+  author: Janne Blomqvist
+  description: Generate a /etc/hosts
+  company: Aalto University
 
   # If the issue tracker for your role is not on github, uncomment the
   # next line and provide a value
@@ -14,7 +14,7 @@ galaxy_info:
   # - GPLv3
   # - Apache
   # - CC-BY
-  license: license (GPLv2, CC-BY, etc)
+  license: GPLv3
 
   min_ansible_version: 1.2
 
@@ -31,28 +31,28 @@ galaxy_info:
   # the ones that apply to your role. If you don't see your
   # platform on this list, let us know and we'll get it added!
   #
-  #platforms:
-  #- name: EL
-  #  versions:
-  #  - all
+  platforms:
+  - name: EL
+    versions:
+    - all
   #  - 5
   #  - 6
   #  - 7
-  #- name: GenericUNIX
-  #  versions:
-  #  - all
+  - name: GenericUNIX
+    versions:
+    - all
   #  - any
-  #- name: OpenBSD
-  #  versions:
-  #  - all
+  - name: OpenBSD
+    versions:
+    - all
   #  - 5.6
   #  - 5.7
   #  - 5.8
   #  - 5.9
   #  - 6.0
-  #- name: Fedora
-  #  versions:
-  #  - all
+  - name: Fedora
+    versions:
+    - all
   #  - 16
   #  - 17
   #  - 18
@@ -61,17 +61,17 @@ galaxy_info:
   #  - 21
   #  - 22
   #  - 23
-  #- name: opensuse
-  #  versions:
-  #  - all
+  - name: opensuse
+    versions:
+    - all
   #  - 12.1
   #  - 12.2
   #  - 12.3
   #  - 13.1
   #  - 13.2
-  #- name: MacOSX
-  #  versions:
-  #  - all
+  - name: MacOSX
+    versions:
+    - all
   #  - 10.10
   #  - 10.11
   #  - 10.12
@@ -82,17 +82,17 @@ galaxy_info:
   #  versions:
   #  - all
   #  - any
-  #- name: Solaris
-  #  versions:
-  #  - all
+  - name: Solaris
+    versions:
+    - all
   #  - 10
   #  - 11.0
   #  - 11.1
   #  - 11.2
   #  - 11.3
-  #- name: SmartOS
-  #  versions:
-  #  - all
+  - name: SmartOS
+    versions:
+    - all
   #  - any
   #- name: eos
   #  versions:
@@ -102,22 +102,22 @@ galaxy_info:
   #  versions:
   #  - all
   #  - 2012R2
-  #- name: Amazon
-  #  versions:
-  #  - all
+  - name: Amazon
+    versions:
+    - all
   #  - 2013.03
   #  - 2013.09
-  #- name: GenericBSD
-  #  versions:
-  #  - all
+  - name: GenericBSD
+    versions:
+    - all
   #  - any
   #- name: Junos
   #  versions:
   #  - all
   #  - any
-  #- name: FreeBSD
-  #  versions:
-  #  - all
+  - name: FreeBSD
+    versions:
+    - all
   #  - 10.0
   #  - 10.1
   #  - 10.2
@@ -132,9 +132,9 @@ galaxy_info:
   #  - 9.1
   #  - 9.2
   #  - 9.3
-  #- name: Ubuntu
-  #  versions:
-  #  - all
+  - name: Ubuntu
+    versions:
+    - all
   #  - lucid
   #  - maverick
   #  - natty
@@ -148,9 +148,9 @@ galaxy_info:
   #  - vivid
   #  - wily
   #  - xenial
-  #- name: SLES
-  #  versions:
-  #  - all
+  - name: SLES
+    versions:
+    - all
   #  - 10SP3
   #  - 10SP4
   #  - 11
@@ -160,17 +160,17 @@ galaxy_info:
   #  - 11SP4
   #  - 12
   #  - 12SP1
-  #- name: GenericLinux
-  #  versions:
-  #  - all
+  - name: GenericLinux
+    versions:
+    - all
   #  - any
   #- name: NXOS
   #  versions:
   #  - all
   #  - any
-  #- name: Debian
-  #  versions:
-  #  - all
+  - name: Debian
+    versions:
+    - all
   #  - etch
   #  - jessie
   #  - lenny
@@ -179,7 +179,8 @@ galaxy_info:
   #  - stretch
   #  - wheezy
 
-  galaxy_tags: []
+  galaxy_tags: 
+    - hosts
     # List tags for your role here, one per line. A tag is
     # a keyword that describes and categorizes the role.
     # Users find roles by searching for tags. Be sure to
