--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ matrix:
 
 env:
 #  - IMAGE_BUILD_PLATFORM=stable-centos7
-  - IMAGE_BUILD_PLATFORM=devel-centos7
+#  - IMAGE_BUILD_PLATFORM=devel-centos7
   - IMAGE_BUILD_PLATFORM=epel-centos7
 
 install:
